# quickanddirty

./: APCinLinux.md  AVRConnectingHardware.md  AVRProgramming.md  AVR_USI_I2C_UART_Gateway.md  BuildRootWithDebian5.md  ChumbyOneDevelopmentWithScratchbox.md  ConfigureIrssi.md  CreatingWirelessHotspotWithLinux.md  DVBTWithDebian.md  ElectronicsAndRobotics.md  EncryptedIsoImages.md  GentooPUAR.md  HidingDataOnPlainSight.md  HuaweiE160EUbuntu910.md  InstallApachePHPSqlite.md  LinuxDeveloperEnvironment.md  LinuxIPaqH38xx.md  MrBugDuster.md  PeReader.md  Pololu3piRobot.md  ProjectHome.md  QuickAndDirtyMedia.md  ResizeNTFSVMwareImage.md  Review_Freescale_LFSTBUSB_LFSTBEB845x.md  RotatingWebcamWithFaceDetection.md  SettingN900ForMeeGoDevelopment.md  ShuffleMP3Player.md  UseScannerFromCommandLine.md  WelhoDVBT.md  WippiesHomeBox.md  XmltvForFinnishChannels.md  adjustimg.md  check_gmail.md  chroot_cp.md  flvcache.md  ginbox.md  makethumb.md  mysqlbackup.md  package_update.md  qad_rssreader.md  (+6 more)
jpiiavr/: Makefile  codeeditor.cpp  codeeditor.h  common.h  gpl-3.0.txt  highlighter.cpp  highlighter.h  jpiiAVR.pro  jpiiavr.qrc  licensedialog.cpp  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.xml  template.txt
jpiibrightness/: jpiibrightness.pro  main.cpp  mainwindow.cpp  resources.qrc
jpiicsv-src/: ChangeLog  Doxyfile  NEWS  antigen.sh  autogen.sh  common.h  configure.ac  main.cpp
jpiilife/: jpiilife.py
jpiimaestro/: webcamcapture.py
jpiiprotodesigner/: Makefile  jpiiProtoDesigner.pro  mainwindow.h  mainwindow.ui  pdip.cpp  protopieceitem.cpp  (+5 more)
(+214 files in other folders)
