AC_INIT([jpiicsv],[0.1])
AM_INIT_AUTOMAKE([jpiicsv],[0.1])
AC_PROG_RANLIB
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL

PKG_CHECK_MODULES(QT, QtCore QtGui QtSql)

CFLAGS="$QT_CFLAGS $CFLAGS $QTINC"
CXXFLAGS="$CFLAGS"
CPPFLAGS="$CXXFLAGS"

LIBS="$QTLIBS $QT_LIBS $LIBS"

AC_OUTPUT(Makefile)
